# acquisition

./: CMakeLists.txt  README.md
src/: acquisition.cpp  acquisition.h  main.cpp  mainIP.cpp  mainMulti.cpp
src/Acquisition/: acquisition.cpp  acquisition.h  acquisitionIP.cpp  acquisitionIP.h  arvdriver.cpp  arvdriver.h
src/Manage/: manage.cpp  manage.h  manage.ui
